--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>My Contact Details</h1>
     <p>My Fictional Address</p>
     <p>h15 house 9 street 238</p>
-    <p>hellothere@ggmail.com</p>
+    <p>hellothereedear@ggmail.com</p>
     <form action="mailto:ma.rajptt@gmail.com" method="post"></form>
     <input type="text">
     <input type="submit">
